add FALCONCTL_OPT_CLUSTER_NAME env var for unmanages k8s clusters
add FALCONCTL_OPT_CLUSTER_NAME env var for unmanages k8s clusters

--- a/helm-charts/falcon-sensor/templates/configmap.yaml
+++ b/helm-charts/falcon-sensor/templates/configmap.yaml
@@ -36,6 +36,7 @@ data:
 
   {{- if and .Values.node.enabled .Values.node.backend }}
   FALCONCTL_OPT_BACKEND: "{{ .Values.node.backend }}"
+  FALCON_CLUSTER_NAME: "{{ .Values.node.clusterName }}"
   {{- end }}
 
   {{- if .Values.container.enabled }}
