--- a/helm-charts/falcon-sensor/values.yaml
+++ b/helm-charts/falcon-sensor/values.yaml
@@ -111,6 +111,8 @@ node:
   # Enable, to run cleanup for the prior daemonset deployment
   cleanupOnly: false
 
+  clusterName: ""
+
 container:
   # When enabled, Helm chart deploys the Falcon Container Sensor to Pods through Webhooks
   enabled: false
